--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <ul class="pict-list">
           <li><img src="image/img1.jpg" alt="" /></li>
           <li><img src="image/img2.jpg" alt="" /></li>
+          <li><img src="image/img4.JPG" alt="" /></li>
           <li><img src="image/img3.jpg" alt="" /></li>
-          <li><img src="image/img4.jpg" alt="" /></li>
           <li><img src="image/img5.jpg" alt="" /></li>
         </ul>
       </section>
